fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -143,19 +143,15 @@ ul li:first-child{
     display: flex;
     /*justify-content: space-between;*/
 }
-.list-group-item div:not(:first-child){
+/*.list-group-item div:not(:first-child){
     text-align: center;
-}
+}*/
 .title{
     flex-grow: 1;
 }
-.add{
-    color: #1e72fd;
-    font-size: 1.2rem;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #1e72fd;
-    border-radius: 5px;
+.ms-btn{
+    background-color: white;
+    color: #1c71e8;
 }
 .list-group-item{
     align-items: center;
@@ -200,6 +196,16 @@ ul li:first-child{
 }
 .action{
     justify-content: center;
+    text-align: center;
+}
+.date{
+    text-align: center;
+}
+.roi{
+    text-align: center;
+}
+.status{
+    text-align: center;
 }
 .edit{
     color: #6c757d;
@@ -215,6 +221,7 @@ ul li:first-child{
 .card{
     margin-bottom: 20px;
 }
+
 @media screen and (max-width:992px) {
     aside{
         width: 50px;
